HTML text exercises
HTML text exercises

--- a/HTML text exercises1.html
+++ b/HTML text exercises1.html
@@ -5,7 +5,18 @@
 	<title>Document</title>
 </head>
 <body>
-<h1 style="background-color:#3cb371;">Dastan Asymbaev</h1>
+	<h1 style="background-color:#3cb371;">Dastan Asymbaev</h1>
+<h1 style="background-color:#ff0000;">1</h1>
+<h1 style="background-color:#0000ff;">2</h1>
+<h1 style="background-color:#ee82ee;">3</h1>
+<h1 style="background-color:#ffa500;">4</h1>
+<h1 style="background-color:#6a5acd;">5</h1>
+<h1 style="background-color:#c10bd7;">6</h1>
+<h1 style="background-color:#d70b36;">7</h1>
+<h1 style="background-color:#0bccd7;">8</h1>
+<h1 style="background-color:#d70b0b;">9</h1>
+<h1 style="background-color:#380bd7;">10</h1>
+
 	
 </body>
 </html>
